--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -6,3 +6,13 @@
   background-color: #333;
   color: #fff;
 }
+
+.header__form {
+  display: flex;
+  width: 50%;
+  height: 40px;
+  border-radius: 20px;
+  background-color: #fff;
+  padding: 0 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+}
