--- a/src/components/WeatherApp.css
+++ b/src/components/WeatherApp.css
@@ -3,6 +3,11 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+  background-image: url("https://images.unsplash.com/photo-1501594907352-04cda38ebc29");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
 }
 
 .city-list {
