--- a/src/components/CityCard.css
+++ b/src/components/CityCard.css
@@ -2,7 +2,7 @@
   background-color: #f9f9f9;
   background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 2rem;
   padding: 20px;
   width: 200px;
   position: relative;
@@ -22,7 +22,7 @@
 .remove-btn {
   background-color: transparent;
   border: none;
-  font-size: 20px;
+  font-size: 26px;
   position: absolute;
   top: 5px;
   right: 5px;
