--- a/src/components/CityCard.css
+++ b/src/components/CityCard.css
@@ -34,6 +34,11 @@
   outline: none;
 }
 
+img {
+  background-color: #84fab0;
+  border-radius: 3rem;
+}
+
 @media (max-width: 768px) {
   .city-card {
     margin-bottom: 20px;
